# LightShield

./: .env.example  .gitignore  LICENSE  README.md  baseline_results.csv  pyproject.toml  rag.py  rag_baseline_results.csv  rag_shield_results.csv  requirements.txt  setup.py  shield_results.csv
.agent/scripts/: auto_preview.py  checklist.py  session_manager.py
.agent/skills/nextjs-react-expert/scripts/: convert_rules.py  react_performance_checker.py
lightshield/: __init__.py  client.py  exceptions.py  system.py
lightshield.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lightshield/adapters/: __init__.py  anthropic_adapter.py  langchain_adapter.py  openai_adapter.py  pinecone_adapter.py
lightshield/benchmarks/: __init__.py  injection_test_cases.py  test_harness.py
lightshield/core/: __init__.py  encapsulator.py  hierarchy.py  uuid_engine.py
lightshield/validators/: __init__.py  anomaly_detector.py  output_validator.py  rag_chunk_scanner.py  tool_tracer.py
lightshieldai/: __init__.py  client.py  encapsulation.py  system.py
lightshieldai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: baseline_results.csv  benchmark_ollama.py  gpt_lightshield.py  llama_chat.py  llama_shieldtest.py  llama_test.py  qwen_test.py  rag_shieldtest.py  rag_test.py  redteam_test.py  shield_results.csv  test_adapters_and_benchmarks.py  test_core.py  test_ollama.py  test_pinecone_adapter.py  test_prepare_validate.py  test_public_api_and_exceptions.py  test_rag_benchmarks.py  test_rag_chunk_scanner.py  test_validators.py
website/: front.html
