[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lightshieldai"
version = "0.1.0"
description = "Lightweight prompt-injection mitigation for LLM applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["ollama>=0.3.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
include = ["lightshieldai"]
